Development history / change log, please read from bottom up

Version 3.1.0 - xx yyy 2013
add some logs to check UI initialization
UniLog2 - fix problem interpreting UTC-offset which does not exist
UniLog2 - fix problem day skip while reading big data files
HoTTAdapter2 - correct EAM current
HoTTAdapter* - update filter

Version 3.0.9 - 05 May 2013
AV4ms_FV_762 - fix problem importing data
HoTTAdapter*, DataVario*, LinkVario* - fix/adapt UI in combination with new SWT release
HoTTAdapter* - calculate CRC for mx-21<->mx16 converter instead of static update
HoTTAdapter* - adapt data reader *.bin and live data of ESC according firmware update 
HoTTAdapter* - enable MDL Viewer tabulator
fix [bug #38250] Feature: Use keyboard for zooming
fix [bug #38251] Feature: Improved update check
fix bug - in startup sometimes an error "null" (NullPointerException) occurs
graphics templates - remove defined end points from graphics templates while potential value end points may outside this range
UniLog2 - adapt to latest firmware 1.09
GPS-Logger - adapt to latest firmware 1.10

Version 3.0.8 - 03 Apr 2013
add Renschler Picolario2 support
add Kontronik Kosmik support
update SWT to version 4.2.1
add IGCAdapter support for short naming
fix bug #38246 - Multiple actions when right-clicking into graphic
fix bug #38245 - Allow editing of commentary in table "File comment"
fix bug #38247 - Progress bar not reset after loading files
fix RFE #38248 - Feature: Copy function for data table
HoTTAdapter* - change/correct Rx->Tx-PLoss measurement name
HoTTAdapter* - change algorithm sending commands during live data gathering
HoTTAdapter* - update Rx->Tx-PLoss calculation, integrate package loss over 1 second period
HoTTAdapter* - update to latest firmware (ESC)
HoTTAdapter* - fix bug in mx-12 <-> mx-16 MDL converter
Jlog2 - update support firmware 4.0.0
documentation update

Version 3.07 - 11 Feb 2013
HoTTAdapter(2) - live data, display detected sensors, optimize performance 