@@ -1,11 +1,12 @@
 Development history / change log, please read from bottom up
 
 Version 3.1.0 - xx yyy 2013
-add some logs to check UI initialization
+add some logs to check UI initialization to prevent initialization exceptions
 UniLog2 - fix problem interpreting UTC-offset which does not exist
-UniLog2 - fix problem day skip while reading big data files
+UniLog2 - fix problem day skip while reading big data files > 24 hours
 HoTTAdapter2 - correct EAM current
 HoTTAdapter* - update filter
+HoTTAdapter* - integrate HoTTMdlViewer with actual version
 
 Version 3.0.9 - 05 May 2013
 AV4ms_FV_762 - fix problem importing data
